ready for testing

--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -2,17 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import dotenv\n",
+    "import pickle\n",
     "import dspy\n",
+    "import re\n",
     "import pandas as pd\n",
     "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
     "from dspy.evaluate import Evaluate\n",
-    "import random"
+    "import random\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed_value = 22"
    ]
   },
   {
@@ -24,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_data = open_examples + specific_examples\n",
-    "random.shuffle(final_data)"
+    "random.shuffle(final_data)\n",
+    "\n",
+    "train_data = final_data[:int(0.8 * len(final_data))]\n",
+    "test_data = final_data[int(0.8 * len(final_data)):]\n",
+    "\n",
+    "print(f\"Train data: {len(train_data)}\")\n",
+    "print(f\"Test data: {len(test_data)}\")"
    ]
   },
   {
@@ -122,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +157,7 @@
     "    prompt = dspy.InputField(desc=\"The prompt to classify.\")\n",
     "\n",
     "    explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
-    "    label = dspy.OutputField(desc=\"True, if the input text is domain specific, False otherwise.\")\n",
+    "    label = dspy.OutputField(desc=\"1, if the input text is law domain, 0 otherwise.\")\n",
     "    \n",
     "\n",
     "class ClassificationModule(dspy.Module):\n",
@@ -155,43 +180,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_answer(answer: str) -> bool:\n",
-    "    answer = answer.lower()\n",
-    "    if \"yes\" in answer or \"true\" in answer:\n",
-    "        return True\n",
-    "    return False"
+    "def parse_answer(answer) -> bool:\n",
+    "    if isinstance(answer, str) and re.match(r\"^[01]$\", answer.strip()):\n",
+    "        return bool(int(answer))\n",
+    "    elif isinstance(answer, int) and answer in [0, 1]:\n",
+    "        return bool(answer)\n",
+    "    else:\n",
+    "        print(f\"Unexpected non-binary label found: {answer}\")\n",
+    "        return False\n",
+    "\n",
+    "def evaluate_model(predictions, true_labels):\n",
+    "    parsed_preds = [parse_answer(pred) for pred in predictions]\n",
+    "    parsed_labels = [parse_answer(label) for label in true_labels]\n",
+    "    \n",
+    "    accuracy = accuracy_score(parsed_labels, parsed_preds)\n",
+    "    \n",
+    "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def comparison_metric(gold, pred, trace=None) -> bool:\n",
-    "    return parse_answer(gold) == parse_answer(pred)"
+    "def comparison_metric(example, pred, trace=None) -> bool:\n",
+    "    return parse_answer(example.label) == parse_answer(pred.label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Going to sample between 1 and 2 traces per predictor.\n",
-      "Will attempt to bootstrap 8 candidate sets.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fewshot_optimizer = BootstrapFewShotWithRandomSearch(metric=comparison_metric, max_bootstrapped_demos=2, num_candidate_programs=8, num_threads=6)"
+    "fewshot_optimizer = BootstrapFewShotWithRandomSearch(\n",
+    "    metric=comparison_metric,\n",
+    "    max_bootstrapped_demos=5,  \n",
+    "    num_candidate_programs=5,  \n",
+    "    num_threads=6\n",
+    ")\n",
+    "\n",
+    "compiled_classification = fewshot_optimizer.compile(ClassificationModule(), trainset=train_data[:100])"
    ]
   },
   {
@@ -203,28 +237,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = ClassificationModule()(prompt=open_examples[0].prompt)"
+    "predictions = []\n",
+    "true_labels = []\n",
+    "\n",
+    "for example in test_data[:100]:\n",
+    "    output = compiled_classification(example.prompt)\n",
+    "    predictions.append(output.label)\n",
+    "    true_labels.append(example.label)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "evaluation_results = evaluate_model(predictions, true_labels)\n",
+    "\n",
+    "print(f\"Evaluation results: Accuracy {evaluation_results * 100}%\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(output.label)"
+    "# Save the results\n",
+    "with open(\"compiled_classification.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(compiled_classification, f)"
    ]
   },
   {
