--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -13,9 +13,9 @@
     "import re\n",
     "import pandas as pd\n",
     "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
-    "from dspy.evaluate import Evaluate\n",
+    "import tiktoken\n",
     "import random\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed_value = 22"
+    "SEED = 22\n",
+    "PRICE_PER_1000_TOKENS = 0.03"
    ]
   },
   {
@@ -52,6 +53,7 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "proxy_url = os.getenv(\"PROXY_URL\")\n",
     "model = \"gpt-4o-mini\"\n",
+    "encoder = tiktoken.encoding_for_model(\"gpt-4-mini\")\n",
     "\n",
     "if not api_key:\n",
     "    raise ValueError(\"API key not found. Please check your environment variables.\")"
@@ -156,7 +158,7 @@
     "\n",
     "    prompt = dspy.InputField(desc=\"The prompt to classify.\")\n",
     "\n",
-    "    explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
+    "    #explanation = dspy.OutputField(desc=\"Reasoning behind the classification.\")\n",
     "    label = dspy.OutputField(desc=\"1, if the input text is law domain, 0 otherwise.\")\n",
     "    \n",
     "\n",
@@ -216,7 +218,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 97 / 98  (99.0):  97%|█████████▋| 97/100 [00:22<00:00,  5.32it/s]"
+     ]
+    }
+   ],
    "source": [
     "fewshot_optimizer = BootstrapFewShotWithRandomSearch(\n",
     "    metric=comparison_metric,\n",
@@ -226,6 +236,36 @@
     ")\n",
     "\n",
     "compiled_classification = fewshot_optimizer.compile(ClassificationModule(), trainset=train_data[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Price calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_tokens(prompt: str) -> int:\n",
+    "    \"\"\"Count tokens in the given text for gpt-4-mini.\"\"\"\n",
+    "    tokens = encoder.encode(prompt)\n",
+    "    return len(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_price(token_count: int) -> float:\n",
+    "    \"\"\"Calculate the price based on token count.\"\"\"\n",
+    "    return (token_count / 1000) * PRICE_PER_1000_TOKENS"
    ]
   },
   {
@@ -244,15 +284,23 @@
     "predictions = []\n",
     "true_labels = []\n",
     "\n",
-    "for example in test_data[:100]:\n",
-    "    output = compiled_classification(example.prompt)\n",
+    "total_tokens = 0\n",
+    "\n",
+    "for example in test_data[:100]:  \n",
+    "    prompt = example.prompt    \n",
+    "    output = compiled_classification(prompt)\n",
+    "    \n",
+    "    total_tokens += count_tokens(prompt)\n",
+    "    total_tokens += count_tokens(output.label)\n",
+    "    \n",
     "    predictions.append(output.label)\n",
     "    true_labels.append(example.label)\n",
     "\n",
     "# Evaluate the model\n",
     "evaluation_results = evaluate_model(predictions, true_labels)\n",
     "\n",
-    "print(f\"Evaluation results: Accuracy {evaluation_results * 100}%\")\n"
+    "print(f\"Evaluation results: Accuracy {evaluation_results * 100}%\")\n",
+    "print(f\"Total price: {calculate_price(total_tokens)} USD\")\n"
    ]
   },
   {
