--- a/models/gpt-4o-mini.ipynb
+++ b/models/gpt-4o-mini.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import os\n",
     "import dotenv\n",
-    "import pickle\n",
     "import dspy\n",
     "import re\n",
     "import pandas as pd\n",
@@ -32,7 +31,8 @@
    "outputs": [],
    "source": [
     "SEED = 22\n",
-    "PRICE_PER_1000_TOKENS = 0.03"
+    "PRICE_PER_1_000_000_TOKENS = 0.15 \n",
+    "PRICE_PER_1_000_000_TOKENS_OUTPUT = 0.60"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +133,8 @@
     "final_data = open_examples + specific_examples\n",
     "random.shuffle(final_data)\n",
     "\n",
-    "train_data = final_data[:int(0.8 * len(final_data))]\n",
-    "test_data = final_data[int(0.8 * len(final_data)):]\n",
+    "train_data = final_data.sample(n=100, random_state=SEED)\n",
+    "test_data = final_data.sample(n=500, random_state=SEED)\n",
     "\n",
     "print(f\"Train data: {len(train_data)}\")\n",
     "print(f\"Test data: {len(test_data)}\")"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,24 +218,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 97 / 98  (99.0):  97%|█████████▋| 97/100 [00:22<00:00,  5.32it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fewshot_optimizer = BootstrapFewShotWithRandomSearch(\n",
     "    metric=comparison_metric,\n",
-    "    max_bootstrapped_demos=5,  \n",
-    "    num_candidate_programs=5,  \n",
-    "    num_threads=6\n",
+    "    max_bootstrapped_demos = 4,\n",
+    "    max_labeled_demos = 5,\n",
+    "    max_rounds = 1,\n",
+    "    num_candidate_programs = 5,\n",
     ")\n",
     "\n",
-    "compiled_classification = fewshot_optimizer.compile(ClassificationModule(), trainset=train_data[:100])"
+    "compiled_classification = fewshot_optimizer.compile(ClassificationModule(), trainset=train_data)\n",
+    "\n",
+    "# Save the model\n",
+    "compiled_classification.save(\"classification_model.json\")"
    ]
   },
   {
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +261,7 @@
    "source": [
     "def calculate_price(token_count: int) -> float:\n",
     "    \"\"\"Calculate the price based on token count.\"\"\"\n",
-    "    return (token_count / 1000) * PRICE_PER_1000_TOKENS"
+    "    return (token_count / 1_000_000) * PRICE_PER_1_000_000_TOKENS"
    ]
   },
   {
@@ -281,12 +277,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = []\n",
-    "true_labels = []\n",
+    "predictions = list()\n",
+    "true_labels = list()\n",
     "\n",
-    "total_tokens = 0\n",
+    "total_tokens = int()\n",
     "\n",
-    "for example in test_data[:100]:  \n",
+    "for example in test_data[:5000]:  \n",
     "    prompt = example.prompt    \n",
     "    output = compiled_classification(prompt)\n",
     "    \n",
@@ -301,17 +297,6 @@
     "\n",
     "print(f\"Evaluation results: Accuracy {evaluation_results * 100}%\")\n",
     "print(f\"Total price: {calculate_price(total_tokens)} USD\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the results\n",
-    "with open(\"compiled_classification.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(compiled_classification, f)"
    ]
   },
   {
@@ -338,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
