--- a/src/v1.ipynb
+++ b/src/v1.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import dotenv\n",
-    "import dspy\n",
     "import re\n",
-    "import pandas as pd\n",
-    "from dspy.teleprompt import BootstrapFewShotWithRandomSearch\n",
-    "import tiktoken\n",
+    "import dspy\n",
+    "import dotenv\n",
     "import random\n",
-    "from sklearn.metrics import accuracy_score"
+    "import tiktoken\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from dspy.teleprompt import BootstrapFewShotWithRandomSearch"
    ]
   },
   {
@@ -31,6 +31,9 @@
    "outputs": [],
    "source": [
     "SEED = 22\n",
+    "TRAIN_SIZE = 100\n",
+    "TEST_SIZE = 1000\n",
+    "TEMPERATURE = 0.2\n",
     "PRICE_PER_1_000_000_TOKENS = 0.15 \n",
     "PRICE_PER_1_000_000_TOKENS_OUTPUT = 0.60"
    ]
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +56,8 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "proxy_url = os.getenv(\"PROXY_URL\")\n",
     "model = \"gpt-4o-mini\"\n",
-    "encoder = tiktoken.encoding_for_model(\"gpt-4-mini\")\n",
+    "\n",
+    "encoder = tiktoken.encoding_for_model(model)\n",
     "\n",
     "if not api_key:\n",
     "    raise ValueError(\"API key not found. Please check your environment variables.\")"
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +73,7 @@
     "    api_key=api_key,\n",
     "    model=model,\n",
     "    api_base=proxy_url,\n",
-    "    temperature=0.0,\n",
+    "    temperature=TEMPERATURE,\n",
     ")\n",
     "\n",
     "dspy.configure(lm=lm)"
@@ -84,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +137,8 @@
     "final_data = open_examples + specific_examples\n",
     "random.shuffle(final_data)\n",
     "\n",
-    "train_data = final_data.sample(n=100, random_state=SEED)\n",
-    "test_data = final_data.sample(n=500, random_state=SEED)\n",
+    "train_data = final_data.sample(n=TRAIN_SIZE, random_state=SEED)\n",
+    "test_data = final_data.sample(n=TEST_SIZE, random_state=SEED)\n",
     "\n",
     "print(f\"Train data: {len(train_data)}\")\n",
     "print(f\"Test data: {len(test_data)}\")"
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +232,7 @@
     "    num_candidate_programs = 5,\n",
     ")\n",
     "\n",
+    "# Optimize the model\n",
     "compiled_classification = fewshot_optimizer.compile(ClassificationModule(), trainset=train_data)\n",
     "\n",
     "# Save the model\n",
@@ -243,12 +248,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_tokens(prompt: str) -> int:\n",
-    "    \"\"\"Count tokens in the given text for gpt-4-mini.\"\"\"\n",
+    "    \"\"\"Count tokens in the given text.\"\"\"\n",
     "    tokens = encoder.encode(prompt)\n",
     "    return len(tokens)"
    ]
@@ -282,7 +287,7 @@
     "\n",
     "total_tokens = int()\n",
     "\n",
-    "for example in test_data[:5000]:  \n",
+    "for example in test_data[:TEST_SIZE]:  \n",
     "    prompt = example.prompt    \n",
     "    output = compiled_classification(prompt)\n",
     "    \n",
@@ -296,15 +301,8 @@
     "evaluation_results = evaluate_model(predictions, true_labels)\n",
     "\n",
     "print(f\"Evaluation results: Accuracy {evaluation_results * 100}%\")\n",
-    "print(f\"Total price: {calculate_price(total_tokens)} USD\")\n"
+    "print(f\"Total price: {calculate_price(total_tokens)} USD\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -323,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
