small updates setup for LSTM + CNN

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\risko\\Desktop\\Prompt-Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from gpt_4o_mini import *\n",
     "from svm_tfidf import DataPreparationSVM, SVMClassifier\n",
@@ -40,11 +49,10 @@
     "\n",
     "trainer = Trainer(ClassificationModule, data_prep.train_data, evaluator)\n",
     "compiled_model = trainer.optimize_model()\n",
-    "print(\"Model optimized and compiled.\")\n",
-    "trainer.save_model(f\"../models/{gpt_model.model_name}.json\")\n",
     "\n",
     "predictions = list()\n",
     "true_labels = [example.label for example in data_prep.test_data]\n",
+    "\n",
     "total_tokens = int()\n",
     "\n",
     "for example in data_prep.test_data:\n",
@@ -63,6 +71,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(f\"../models/{gpt_model.model_name}.json\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cpu\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "config = Config(train_size=15_000, test_size=5_000)\n",
@@ -86,19 +111,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 98.78%\n"
+     ]
+    }
+   ],
    "source": [
     "svm_classifier = SVMClassifier(config)\n",
     "svm_classifier.train(X_train, y_train)\n",
     "\n",
     "# Evaluate the classifier and print results\n",
     "accuracy = svm_classifier.evaluate(X_test, y_test)\n",
-    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
-    "\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to ../models/SVM_TFIDF.joblib\n"
+     ]
+    }
+   ],
+   "source": [
     "# Save the model\n",
-    "svm_classifier.save_model(f\"..models/{svm_classifier.model_name}.joblib\")"
+    "svm_classifier.save_model(f\"../models/{svm_classifier.model_name}.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LSTM + CNN"
    ]
   },
   {
