--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -25,9 +25,8 @@
     }
    ],
    "source": [
-    "from gpt_4o_mini import *\n",
-    "from svm_tfidf import DataPreparationSVM, SVMClassifier\n",
-    "from utilities import Config\n",
+    "from gpt_4o_mini import Trainer, GPT4Model\n",
+    "from svm_tfidf import SVMClassifier\n",
     "import os\n",
     "import dotenv\n",
     "import requests\n",
@@ -51,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available models: ['gpt-4o-mini', 'gpt-4', 'gpt-4o', 'llama3.1:70b', 'o1-mini', 'llama3.1:8b', 'o1-preview', 'gpt-4-turbo']\n"
+      "Available models: ['gpt-4o', 'llama3.1:70b', 'llama3.1:8b', 'o1-mini', 'o1-preview', 'gpt-4', 'gpt-4o-mini', 'gpt-4-turbo']\n"
      ]
     }
    ],
@@ -87,15 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n",
-      "Train data: 20\n",
+      "Train data: 10\n",
       "Test data: 20\n",
       "Going to sample between 1 and 4 traces per predictor.\n",
       "Will attempt to bootstrap 5 candidate sets.\n"
@@ -105,67 +103,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 413.74it/s]\n"
+      "Average Metric: 5 / 10  (50.0): 100%|██████████| 10/10 [00:07<00:00,  1.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New best score: 95.0 for seed -3\n",
-      "Scores so far: [95.0]\n",
-      "Best score so far: 95.0\n"
+      "New best score: 50.0 for seed -3\n",
+      "Scores so far: [50.0]\n",
+      "Best score so far: 50.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 484.49it/s] \n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:06<00:00,  1.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
+      "New best score: 100.0 for seed -2\n",
+      "Scores so far: [50.0, 100.0]\n",
+      "Best score so far: 100.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 4/20 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 534.66it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores so far: [95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|██        | 4/20 [00:00<?, ?it/s]\n"
+      " 40%|████      | 4/10 [00:03<00:05,  1.08it/s]\n"
      ]
     },
     {
@@ -179,22 +149,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 487.58it/s]\n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:04<00:00,  2.36it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
+      "Scores so far: [50.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:00<?, ?it/s]\n"
+      " 40%|████      | 4/10 [00:07<00:11,  1.89s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:03<00:00,  2.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores so far: [50.0, 100.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 2/10 [00:03<00:14,  1.79s/it]\n"
      ]
     },
     {
@@ -208,22 +207,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 405.69it/s] \n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:03<00:00,  2.90it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0, 95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
+      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 1/20 [00:00<?, ?it/s]\n"
+      " 10%|█         | 1/10 [00:01<00:14,  1.66s/it]\n"
      ]
     },
     {
@@ -237,22 +236,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 868.72it/s] \n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:02<00:00,  3.41it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0, 95.0, 95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
+      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:00<?, ?it/s]\n"
+      " 20%|██        | 2/10 [00:03<00:13,  1.72s/it]\n"
      ]
     },
     {
@@ -266,22 +265,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 810.05it/s] \n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:05<00:00,  1.88it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0, 95.0, 95.0, 95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n"
+      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:00<?, ?it/s]\n"
+      " 20%|██        | 2/10 [00:03<00:12,  1.59s/it]\n"
      ]
     },
     {
@@ -295,15 +294,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Average Metric: 19 / 20  (95.0): 100%|██████████| 20/20 [00:00<00:00, 817.30it/s] \n"
+      "Average Metric: 10 / 10  (100.0): 100%|██████████| 10/10 [00:05<00:00,  1.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores so far: [95.0, 95.0, 95.0, 95.0, 95.0, 95.0, 95.0, 95.0]\n",
-      "Best score so far: 95.0\n",
+      "Scores so far: [50.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0]\n",
+      "Best score so far: 100.0\n",
       "8 candidate programs found.\n",
       "Evaluation results: Accuracy 95.00%\n"
      ]
@@ -313,45 +312,32 @@
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "proxy_url = os.getenv(\"PROXY_URL\")\n",
     "\n",
-    "config = Config(train_size=20, test_size=20)\n",
-    "data_prep = DataPreparationLLM(config)\n",
-    "data_prep.load_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
     "\n",
-    "gpt_model = GPT4Model(api_key=api_key, proxy_url=proxy_url, model_name='gpt-4o-mini')\n",
-    "evaluator = Evaluator()\n",
+    "gpt_model = GPT4Model(api_key=api_key, proxy_url=proxy_url, domain='law', model_name='gpt-4o-mini', train_size=10, test_size=20)\n",
+    "gpt_model.load_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
     "\n",
-    "trainer = Trainer(ClassificationModule, data_prep.train_data, evaluator)\n",
+    "trainer = Trainer(gpt_model.train_data)\n",
     "compiled_model = trainer.optimize_model()\n",
-    "\n",
-    "predictions = list()\n",
-    "true_labels = [example.label for example in data_prep.test_data]\n",
-    "\n",
-    "total_tokens = int()\n",
-    "\n",
-    "for example in data_prep.test_data:\n",
-    "    prompt = example.prompt\n",
-    "    prediction = compiled_model(prompt)\n",
-    "    predictions.append(prediction.label)\n",
-    "\n",
-    "accuracy = evaluator.evaluate_model(predictions, true_labels)\n",
+    "accuracy = trainer.test_model(gpt_model.test_data)\n",
     "\n",
     "print(f\"Evaluation results: Accuracy {accuracy * 100:.2f}%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('prog', Predict(StringSignature(prompt -> reasoning, label\n",
-      "    instructions='Classify if a text is specific for a domain or not. Target domain is law.'\n",
+      "[('prog', Predict(StringSignature(prompt -> reasoning, target, label\n",
+      "    instructions='Classify if a text is specific for a domain or not.'\n",
       "    prompt = Field(annotation=str required=True json_schema_extra={'desc': 'The prompt to classify.', '__dspy_field_type': 'input', 'prefix': 'Prompt:'})\n",
       "    reasoning = Field(annotation=str required=True json_schema_extra={'prefix': \"Reasoning: Let's think step by step in order to\", 'desc': '${reasoning}', '__dspy_field_type': 'output'})\n",
-      "    label = Field(annotation=str required=True json_schema_extra={'desc': '1, if the input text is law domain, 0 otherwise.', '__dspy_field_type': 'output', 'prefix': 'Label:'})\n",
+      "    target = Field(annotation=str required=True json_schema_extra={'desc': 'The target domain to classify the prompt against.', '__dspy_field_type': 'output', 'prefix': 'Target:'})\n",
+      "    label = Field(annotation=str required=True json_schema_extra={'desc': '1, if the input text belong to domain, 0 otherwise.', '__dspy_field_type': 'output', 'prefix': 'Label:'})\n",
       ")))]\n",
       "Model saved to ../models/gpt-4o-mini.json\n"
      ]
@@ -370,109 +356,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device: cpu\n",
-      "Train size: 20000\n",
-      "Test size: 10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config = Config(train_size=20_000, test_size=10_000, seed=4444)\n",
+    "svm_classifier = SVMClassifier(C=0.1, train_size=10_000, test_size=10_000, seed=22)\n",
     "\n",
-    "data_prep = DataPreparationSVM(config)\n",
-    "data = data_prep.load_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
+    "# Prepare data (assuming 'dummy_open.csv' and 'dummy_specific.csv' are paths to your data files)\n",
+    "X_train, X_test, y_train, y_test = svm_classifier.prepare_data(\"../data/open_domain_data.csv\", \"../data/specific_domain_data.csv\")\n",
     "\n",
-    "X_train, X_test, y_train, y_test = data_prep.prepare_data(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fit_time': array([17.03054047, 16.99490213, 17.06809402, 17.08671927, 24.49330306]), 'score_time': array([4.01497626, 3.96303582, 3.97708201, 4.43841743, 4.03846121]), 'test_accuracy': array([0.959  , 0.95475, 0.951  , 0.954  , 0.964  ]), 'test_precision': array([0.941247  , 0.93645084, 0.93273273, 0.93686109, 0.9510574 ]), 'test_recall': array([0.9596577 , 0.95418448, 0.94868662, 0.95174099, 0.96151497])}\n",
-      "Accuracy: 96.06%\n",
-      "Precision: 94.81%\n",
-      "Recall: 95.47%\n"
-     ]
-    }
-   ],
-   "source": [
-    "svm_classifier = SVMClassifier(config)\n",
-    "cross_val_scores = svm_classifier.cross_validate_model(X_train, y_train, cv=5)\n",
-    "print(cross_val_scores)\n",
+    "# Train the model\n",
     "svm_classifier.train(X_train, y_train)\n",
     "\n",
-    "# Evaluate the classifier \n",
-    "accuracy, precision, recall = svm_classifier.evaluate(X_test, y_test)\n",
-    "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
-    "print(f\"Precision: {precision * 100:.2f}%\")\n",
-    "print(f\"Recall: {recall * 100:.2f}%\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test overfitting"
+    "# Cross-validate\n",
+    "cv_results = svm_classifier.cross_validate_model(X_train, y_train, cv=3)\n",
+    "print(\"Cross-validation Results:\", cv_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Accuracy: 96.84%\n",
-      "Training Precision: 95.77%\n",
-      "Training Recall: 96.54%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_accuracy, train_precision, train_recall = svm_classifier.evaluate(X_train, y_train)\n",
-    "print(f\"Training Accuracy: {train_accuracy * 100:.2f}%\")\n",
-    "print(f\"Training Precision: {train_precision * 100:.2f}%\")\n",
-    "print(f\"Training Recall: {train_recall * 100:.2f}%\")"
+    "# Evaluate on test data\n",
+    "evaluation_results = svm_classifier.evaluate(X_test, y_test)\n",
+    "print(\"Evaluation Results:\", evaluation_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model saved to ../models/SVM_TFIDF.joblib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save the model\n",
-    "svm_classifier.save_model(f\"../models/{svm_classifier.model_name}.joblib\")"
+    "svm_classifier.save_model('svm_model.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM + CNN"
+    "# LSTM"
    ]
   },
   {
